--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,12 @@ include = ["src*"]
 [tool.uv]
 package = true
 
-[project.scripts]
-setup-hsm = "setup_mock:setup"
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-html>=4.2.0",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["src/tests"]
